<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mall-K</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_lista">MALL-K</string>
    
    <string name="title_activity_detalle">Vista Detalle</string>
    <string name="title_activity_fotografia">Vista Fotografia</string>
    

    <string-array name="ListaTiendas">
        <item>Tienda de Zapatos</item>
        <item>Tienda de Pantalones</item>
        <item>Tienda de Camisas</item>
        <item>Tienda de Deportes</item>
        <item>Tienda de Caramelos</item>
        <item>Tienda de Videojuegos</item>
        <item>Tienda de Ordenadores</item>
    </string-array>

    <string name="botonLlamada">Llamar por teléfono</string>
    <string name="botonImagen">Imágen</string>
    
    <string name="textoDireccion">Dirección</string>
    <string name="textoTelefono">Teléfono</string>
    <string name="textoHorarios">Horarios</string>
    <string name="textoWebsite">Website</string>
    <string name="textoEMail">E-Mail</string>
    
    <string name="descripcion_fotografia">Foto del comercio</string>
    <string name="descripcion_camisas">Foto de una tienda de camisas</string>
    <string name="descripcion_caramelos">Foto de una tienda de caramelos</string>
    <string name="descripcion_deportes">Foto de una tienda de deportes</string>
    <string name="descripcion_ordenadores">Foto de una tienda de ordenadores</string>
    <string name="descripcion_pantalones">Foto de una tienda de pantalones</string>
    <string name="descripcion_videojuegos">Foto de una tienda de videojuegos</string>
    <string name="descripcion_zapatos">Foto de una tienda de zapatos</string>
    <string name="descripcion_nombre">Reloj en NYC loren ipsum loren ipsum loren ipsum loren ipsum loren ipsum</string>
    <string name="descripcion_icono">Icono de chat</string>
    
    
    

</resources>
